--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body class="container">
     <header>
-        <img src="assets/images/logo.png" alt="" width="100">
+        <img src="assets/images/logo.png" alt="" width="100" class="pull-left">
+        <div class="pull-right">
+            <input type="text"> 
+            <input type="button" value="Search">
+        </div>
     </header>
     <nav>
         <ul class="pull-left">
